# hiveBD

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SPEC.md  TDD.md  package.json
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/hivedb-core/: Cargo.toml  README.md
crates/hivedb-core/src/: clock.rs  collections.rs  context.rs  db.rs  error.rs  event.rs  harness.rs  lib.rs  log.rs  memory_log.rs  projection.rs  reactive.rs  shard.rs
crates/hivedb-core/src/causal/: mod.rs
crates/hivedb-core/src/memory/: mod.rs  working.rs
crates/hivedb-core/src/state/: causal_thread.rs  consent_graph.rs  current_facts.rs  mod.rs  task_state.rs  tool_ledger.rs
crates/hivedb-core/tests/: compile_fail.rs  contract_generic_consumer.rs  g11_semantic_integrity.rs  g1_log.rs  g2_projections.rs  g2_tool_ledger.rs  g3_working.rs  g4_semantic.rs  g5_reactive.rs  g6_consent.rs  g7_concurrency.rs  g9_collections.rs  g9a_causal_thread.rs  g9b_agent_context.rs  g9c_harness.rs  g9d_e2e.rs
crates/hivedb-core/tests/common/: mod.rs
crates/hivedb-core/tests/ui/: event_input_no_seq.rs  event_input_no_seq.stderr
crates/hivedb-index/: Cargo.toml
crates/hivedb-index/examples/: g11_semantic_benchmark.rs
crates/hivedb-index/src/: hnsw.rs  index.rs  lib.rs  rrf.rs  text.rs  types.rs
crates/hivedb-index/tests/: g11_semantic_integrity.rs  g4_semantic.rs
crates/hivedb-napi/: Cargo.toml
crates/hivedb-napi/src/: lib.rs
docs/: AGENT_INTEGRATION.md  DISTRIBUTION.md  IMPLEMENTATION.md  USER_GUIDE.md
