[workspace]
resolver = "3"
members = ["crates/hivedb-core", "crates/hivedb-index", "crates/hivedb-napi"]

[workspace.package]
version = "0.2.0"
edition = "2024"
authors = ["John Paez <...>"]
license = "Apache-2.0"
repository = "https://github.com/johpaz/hive-db"
rust-version = "1.95"

[workspace.dependencies]
redb = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
bincode = "1"
uuid = { version = "1", features = ["serde", "v4"] }
dashmap = "6"

[profile.release]
lto = true
