[package]
name = "hivedb-napi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Binding napi-rs de HiveDB para Bun/Node.js."

[lib]
crate-type = ["cdylib"]

[dependencies]
hivedb-core = { path = "../hivedb-core" }
hivedb-index = { path = "../hivedb-index" }
napi = { version = "2.3", default-features = false, features = ["napi8", "async"] }
napi-derive = "2.3"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["sync", "rt", "macros"] }

[build-dependencies]
napi-build = "2.3"
