[package]
name = "hivedb-napi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Binding napi-rs de HiveDB para Bun/Node.js."

[lib]
crate-type = ["cdylib"]

[dependencies]
hivedb-core = { path = "../hivedb-core" }
hivedb-index = { path = "../hivedb-index" }
napi = { version = "3", default-features = false, features = ["napi8", "async", "tokio_rt"] }
napi-derive = "3"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["sync", "rt", "macros"] }
uuid = { workspace = true }

[build-dependencies]
napi-build = "2"
